# cosmere-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.job  Dockerfile.serve  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml
cosmere_rag/agent/: __init__.py  agent.py  cli.py  config.py  prompts.py  state.py  tools.py  types.py
cosmere_rag/core/: chunk.py  retrieved_chunk.py  retriever.py
cosmere_rag/embed/: cli.py  embedder.py  ids.py  store.py
cosmere_rag/eval/: __init__.py  baselines.py  cli.py  config.py  dataset.py  evaluators_deepeval.py  evaluators_ir.py  evaluators_llm.py  experiment.py  langsmith_dataset.py  metrics_deepeval.py  metrics_ir.py  report.py  runner.py
cosmere_rag/index/: cli.py
cosmere_rag/ingest/: cli.py  coppermind.py  mistborn_era1_seeds.py
cosmere_rag/retrieval/: bigquery_store.py  chain.py  chroma_store.py
cosmere_rag/slack/: app.py  formatting.py  handlers.py  text.py  threading.py
eval/golden_set/: mistborn_era1.jsonl
infra/terraform/: README.md  apis.tf  artifact_registry.tf  backend.tf  bigquery.tf  cloud_run.tf  iam.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build_golden_set.py  build_noise_index.py  compare_eval.py  fetch_corpus.sh  query_bigquery.py  query_chroma.py
tests/: test_agent.py  test_bigquery_store.py  test_chroma_store.py  test_coppermind.py  test_eval_dataset.py  test_eval_evaluators_ir.py  test_eval_evaluators_llm.py  test_eval_experiment.py  test_eval_metrics_ir.py  test_eval_runner.py  test_noise_embedder.py  test_retrieval_chain.py  test_slack_formatting.py  test_slack_handlers.py  test_slack_text.py  test_slack_threading.py
tests/fixtures/synthetic/: Breeze.md  Ham.md
