[project]
name = "cosmere-rag"
version = "0.1.0"
description = "RAG over Brandon Sanderson's Cosmere"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.7",
]

[project.scripts]
cosmere-ingest-coppermind = "cosmere_rag.ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cosmere_rag"]

[dependency-groups]
dev = [
    "pytest>=8",
]
