[project]
name = "cosmere-rag"
version = "0.1.0"
description = "RAG over Brandon Sanderson's Cosmere"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.3",
    "python-dotenv>=1",
]

[project.optional-dependencies]
serve = [
    "langchain>=1",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.6",
    "langsmith>=0.7.33",
    "google-cloud-bigquery>=3.25",
    "slack-bolt>=1.20",
    "numpy>=2",
]
build = [
    "tiktoken>=0.7",
    "pyarrow>=17",
    "numpy>=2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langsmith>=0.7.33",
    "google-cloud-bigquery>=3.25",
]
eval = [
    "cosmere-rag[serve]",
    "langsmith>=0.7.33",
]

[project.scripts]
cosmere-ingest-coppermind = "cosmere_rag.ingest.cli:main"
cosmere-embed = "cosmere_rag.embed.cli:main"
cosmere-index = "cosmere_rag.index.cli:main"
cosmere-eval = "cosmere_rag.eval.cli:main"
cosmere-ask = "cosmere_rag.agent.cli:main"
cosmere-slack = "cosmere_rag.slack.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cosmere_rag"]

[dependency-groups]
dev = [
    "pytest>=8",
    "chromadb>=0.5",
]
